--- a/style.css
+++ b/style.css
@@ -5,8 +5,6 @@
 }
 
 html{ 
-    width: 100vw;
-    height: 100vh;
     font-size: 62.5%;
     color: black;
     font-family: 'Lato', sans-serif;
@@ -18,27 +16,32 @@ body{
    background-size: cover;
    background-position-y:0px ;
    background-repeat: no-repeat;
+   display: flex;
+   flex-direction: column;
+   justify-content: center;
+   align-items: center;
+   min-height: 100vh;
+}
+main{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 1rem;
 }
 h1{
-    display: flex;
-    justify-content:center;
-    align-items: center;
-    margin-top: 44vh;
-    font-size: 28px;
+
+    font-size: 3rem;
     font-style: italic;
     color: rgb(205, 205, 205);
     text-shadow: 4px 2px 3px rgb(0, 0, 0);
+    max-width: 1150px;
+    text-align: center;
 }
 
-.btns{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    min-height: 30vh;
-    left: auto;
-}
 
-.btns a{
+
+main a{
     position: relative;
     display: inline-block;
     font-size: 1.5em;
@@ -53,7 +56,7 @@ h1{
     transition: color 1s,box-shadow 1s;
 }
   
-.btns a:hover{
+main a:hover{
     transition-delay: 0s, 1s;
     color: #fff;
     box-shadow:
@@ -64,7 +67,7 @@ h1{
     0 0 160px red;
 }
 
-.btns a::before {
+main a::before {
     content: ' ';
     position: absolute;
     top: 0;
@@ -77,7 +80,7 @@ h1{
     transition: 1s;
 }
 
-.btns a:hover:before{
+main a:hover:before{
     width: 100%;
 }
 
@@ -94,7 +97,7 @@ footer p, footer a{
   text-align: center;
   text-decoration: none;
   color: rgb(255, 251, 251);
-  font-size: 0.7rem;
+  font-size: 1rem;
   font-family: 'Montserrat', sans-serif;
   font-weight: 200;
   font-style: normal;
